--- a/cpp/Dockerfile
+++ b/cpp/Dockerfile
@@ -1,7 +1,7 @@
-# To build the docker image, run the following command from the shell. This command must be run in
-# the "aws-doc-sdk-examples" directory, the parent directory of "cpp", in order to access the resources folder.
+# To build the docker image, run the following command from the shell. This Dockerfile
+# is configured to be run from with the cpp directory of aws-doc-sdk-examples. 
 #
-# 'docker build -f cpp/Dockerfile -t <container_tag> .'
+# 'docker build -t <container_tag> .'
 #
 # The following command will run the docker image, copying your AWS credentials.
 # 'docker run -it --volume ~/.aws/credentials:/home/tests/.aws/credentials <container_tag>'
@@ -15,7 +15,7 @@ RUN \
 
 # Build only the services needed for example code.
 ENV SERVICES="acm;autoscaling;cloudtrail;codebuild;codecommit;cognito-idp;dynamodb;ec2;elasticache;elasticbeanstalk"
-ENV SERVICES=${SERVICES}";elasticfilesystem;email;events;glacier;glue;guardduty;iam;kinesis;lambda;logs;mediaconvert;monitoring"
+ENV SERVICES=${SERVICES}";elasticfilesystem;email;events;glacier;glue;guardduty;iam;kinesis;lambda;logs;mediaconvert;medical-imaging;monitoring"
 ENV SERVICES=${SERVICES}";monitoring;neptune;rds;rds-data;redshift;rekognition;s3;s3-crt;s3-encryption;secretsmanager;sesv2;sns;sqs"
 ENV SERVICES=${SERVICES}";storagegateway;sts;transfer;transcribe;transcribestreaming"
 
