--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -10,3 +10,5 @@ jobs:
     steps:
       - name: Run pull request stats
         uses: flowwer-dev/pull-request-stats@master
+        with:
+          period: 7
