--- a/cpp/example_code/medical-imaging/hello_health_imaging/CMakeLists.txt
+++ b/cpp/example_code/medical-imaging/hello_health_imaging/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 # snippet-start:[cpp.example_code.medical-imaging.hello_medical-imaging.cmake]
 # Set the minimum required version of CMake for this project.
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.13)
 
 # Set the AWS service components used by this project.
 set(SERVICE_COMPONENTS medical-imaging)
@@ -30,7 +30,7 @@ if (WINDOWS_BUILD)
     # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
 
     # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-    # and set the proper subdirectory to the executables' location.
+    # and set the proper subdirectory to the executable location.
 
     AWSSDK_CPY_DYN_LIBS(SERVICE_COMPONENTS "" ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR})
 endif ()
