--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -1016,9 +1016,9 @@ medical-imaging_Scenario_image_sets_and_frames:
                 - cpp.example_code.medical-imaging.image-sets-workflow.copy-dicom-files
             - description: Import the DICOM files to the &S3; data store.
               snippet_tags:
-                - cpp.example_code.medical-imaging.image-sets-workflow.dicom-import1
-                - cpp.example_code.medical-imaging.image-sets-workflow.dicom-import2
+                - cpp.example_code.medical-imaging.image-sets-workflow.dicom-import
                 - cpp.example_code.medical_imaging.StartDICOMImportJob
+                - cpp.example_code.medical-imaging.image-sets-workflow.wait_import
             - description: Get image sets created by the DICOM import job.
               snippet_tags:
                 - cpp.example_code.medical-imaging.image-sets-workflow.get_image_sets
