--- a/.tools/test/config/targets.yaml
+++ b/.tools/test/config/targets.yaml
@@ -11,11 +11,11 @@ javascriptv3:
   account_id: "875008041426"
   status: "enabled"
 javav2:
-  account_id: "814548047983" # back-up "667348412466"
+  account_id: "667348412466" # back-up "814548047983"
   status: "enabled"
 kotlin:
-  account_id: "814548047983" # back-up "667348412466"
-  status: "disabled"
+  account_id: "471951630130" # back-up "814548047983"
+  status: "enabled"
 php:
   account_id: "733931915187"
   status: "enabled"
