--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -3,21 +3,21 @@ ruby "3.1.2"
 
 gem "aws-sdk"
 gem "cli-ui"
-gem "multi_json"
+gem "json"
 gem "mail"
 gem "mime"
-gem "json"
+gem "multi_json"
 gem "openssl"
 gem "open-uri"
 gem "pp"
+gem "rack"
+gem "rack-test"
 gem "rake"
 gem "rspec"
 gem "rubocop"
 gem "rubocop-github"
 gem "rubocop-rake"
 gem "rubyzip"
-gem "zip"
+gem "sequel"
 gem "sinatra"
-gem 'sequel'
-gem 'rack'
-gem 'rack-test'
+gem "zip"
