fixing ruby tests

--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -10,6 +10,7 @@ gem "multi_json"
 gem "openssl"
 gem "open-uri"
 gem "pp"
+gem "pry"
 gem "rack"
 gem "rack-test"
 gem "rake"
@@ -17,7 +18,7 @@ gem "rspec"
 gem "rubocop"
 gem "rubocop-github"
 gem "rubocop-rake"
-gem "rubyzip"
 gem "sequel"
 gem "sinatra"
-gem "zip"
+gem 'rubyzip', '>= 1.0.0'
+gem 'zip-zip'
