Add bedrock directory to workspaces

--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -18,6 +18,7 @@
   },
   "workspaces": [
     "example_code/auto-scaling",
+    "example_code/bedrock",
     "example_code/cloudwatch",
     "example_code/cloudwatch-events",
     "example_code/cloudwatch-logs",
