JavaScript (v3): Task - Update dockerfile

--- a/javascriptv3/Dockerfile
+++ b/javascriptv3/Dockerfile
@@ -7,23 +7,19 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+# Copy source code
+COPY ./javascriptv3 /javascriptv3
+
 # Set non-root user
 RUN useradd -m automation && \
-    chown -R automation:automation /home/automation
+    chown -R automation:automation /javascriptv3
 USER automation:automation
 
-# Add config
-RUN mkdir /home/automation/.aws && \
-    echo "[default]\nregion = us-east-1" > /home/automation/.aws/config
-
-# Copy source code
-COPY --chown=automation:automation ./javascriptv3 /home/automation/javascriptv3
-
 # Copy resources
-COPY --chown=automation:automation ./resources /home/automation/resources
-COPY --chown=automation:automation ./python/example_code/glue/flight_etl_job_script.py /home/automation/python/example_code/glue/flight_etl_job_script.py
-COPY --chown=automation:automation ./workflows /home/automation/workflows
+COPY --chown=automation:automation ./resources /resources
+COPY --chown=automation:automation ./python/example_code/glue/flight_etl_job_script.py /python/example_code/glue/flight_etl_job_script.py
+COPY --chown=automation:automation ./workflows /workflows
 
 # Set default command
 # `npm i` needs to be run in the container. Otherwise it causes a dependency issue: https://github.com/evanw/esbuild/issues/1646#issuecomment-1238080595
-CMD npm i --prefix /home/automation/javascriptv3 && npm run --prefix /home/automation/javascriptv3 integration-test
+CMD npm i --prefix /javascriptv3 && npm run --prefix /javascriptv3 integration-test
