--- a/javav2/example_code/pinpoint/pom.xml
+++ b/javav2/example_code/pinpoint/pom.xml
@@ -29,7 +29,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.21.20</version>
+                <version>2.22.12</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -70,6 +70,13 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>pinpointsmsvoice</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/pinpointemail -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>pinpointemail</artifactId>
+            <version>2.22.12</version>
+        </dependency>
+
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>pinpoint</artifactId>
