--- a/javascriptv3/Dockerfile
+++ b/javascriptv3/Dockerfile
@@ -1,4 +1,5 @@
 # syntax=docker/dockerfile:1
 FROM node:20
 COPY . /javascriptv3
-CMD npm i --prefix /javascriptv3 && npm run --prefix /javascriptv3 integration-test
+RUN npm i --prefix /javascriptv3
+CMD npm run --prefix /javascriptv3 integration-test
