--- a/.doc_gen/metadata/bedrock-agent_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-agent_metadata.yaml
@@ -176,7 +176,7 @@ bedrock-agent_GettingStartedWithBedrockAgents:
         - sdk_version: 3
           github: python/example_code/bedrock-agent
           excerpts:
-            - description: Create and invoke an agent
+            - description: Create and invoke an agent.
               snippet_tags:
                 - python.example_code.bedrock-agent.Scenario_GettingStartedBedrockAgents
   services:
