Add prompt chaining scenario

--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -778,3 +778,20 @@ cross_Testing:
                 - rustv1/examples/testing/src/replay.rs
   services:
     s3:
+cross_ServerlessPromptChaining:
+  title: Build and orchestrate generative AI applications with &SFN; and &BR;
+  title_abbrev: Orchestrate generative AI applications with &SFN;
+  synopsis: build and orchestrate generative AI applications with &SFN; and &BR;.
+  category: Scenarios
+  languages:
+    Python:
+      versions:
+        - sdk_version: 3
+          block_content: cross_ServerlessPromptChaining_Python_block.xml
+  service_main: bedrock
+  services:
+    bedrock:
+    bedrock-runtime:
+    bedrock-agent:
+    bedrock-agent-runtime:
+    sfn:
