--- a/javascriptv3/example_code/bedrock-runtime/package.json
+++ b/javascriptv3/example_code/bedrock-runtime/package.json
@@ -9,5 +9,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.489.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.1.3"
   }
 }
