--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -116,7 +116,6 @@ bedrock-runtime_InvokeClaude:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation
   title_abbrev: Text generation with Anthropic Claude 2
   synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation.
-  category:
   languages:
     Go:
       versions:
@@ -137,6 +136,14 @@ bedrock-runtime_InvokeClaude:
             - description: Invoke the Anthropic Claude 2 foundation model to generate text.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_claude.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Anthropic Claude 2 foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/action/invoke-model.js
     PHP:
       versions:
         - sdk_version: 3
