--- a/javav2/usecases/creating_amazon_cognito_app/src/main/resources/application.yml
+++ b/javav2/usecases/creating_amazon_cognito_app/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
       client:
         registration:
           cognito:
-            clientId: 60euqroqsbsnsrocidlvsd88v2
-            clientSecret: rakur64r3b6cibcns459en922a75amsd7436274ufvbtul4rd4i
+            clientId: <enter value>
+            clientSecret: <enter value>
             scope: openid, email
             redirectUriTemplate: http://localhost:8080/login/oauth2/code/cognito
             clientName: spring-boot-backend
         provider:
           cognito:
-            issuerUri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_Taz4YtkM2
+            issuerUri: https://cognito-idp.us-east-1.amazonaws.com/<enter value>
